Apply java -> kt transformations